# mem-pmod

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
data/: measurements.txt
data/test/: fakemeasurements.txt  measurements.txt
report/: .gitignore  bibliography.bib  main.tex  packages.tex
report/sections/: .gitignore  implementation.tex  introduction.tex  model.tex
scripts/: plot.py
src/: Electrical.cpp  Electrical.h  Measurements.cpp  Measurements.h  MemoryModel.hpp  Optimization.hpp  TSection.cpp  TSection.h  Types.hpp  main.cpp
test/: test.h  test_Measurements.cpp  test_Optimization.cpp  test_TSection.cpp  test_export.cpp
